--- a/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "EmpleadoConnection": "Server=\\mssqllocaldb;Database=ExamDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
